# ttc2018liveContest

./: .dockerignore  .gitignore  .travis.yml  20210407_output.csv  20210408b_compiledWeaving_NoInitLocations_loadWeaving_InitLocations.csv  20210409a_initlocations_compiled_vs_load_weaving.csv  20210409b_initLocations_compiled_vs_weavingAtLoadTime.csv  20210409d_initLocations_comparison.csv  20210409e_compiled_initLocation.csv  20210409f_NMFvsEMF_changes.csv  20210409g_comparison.csv  README.md  better-plots.ipynb  build-docker.sh  docker.sh  julia-plots.ipynb  ls-docker-images.sh  set-docker-configs.sh
cache/: .gitignore
config/: config-docker-differential.json  config-docker-graphblas.json  config-docker-java11.json  config-docker-java8-ci-Hawk-batch-variants.json  config-docker-java8.json  config-docker-neo4j.json  config-docker-net31.json  config-docker-sql.json  config-travis.json  config.json  reporting.json
docker/: Dockerfile-common  Dockerfile-differential  Dockerfile-graphblas  Dockerfile-java11  Dockerfile-java8  Dockerfile-neo4j  Dockerfile-net31  Dockerfile-sql  check-docker-hub-tags.sh  entrypoint-differential.sh  entrypoint-graphblas.sh  entrypoint-java11.sh  entrypoint-java8.sh  entrypoint-neo4j.sh  entrypoint-sql.sh  ls-images.sh  set-configs.sh
expected-results/: results.csv
models/: .dockerignore
output/: output-docker-2021-05-25T21.22.37-graphblas.csv  output-docker-2021-05-25T21.22.37-java11.csv  output-docker-2021-05-25T21.22.37-neo4j.csv
reporting/: check_results.R  visualize.R
reporting2/: .gitignore  Makefile  README.md  plot.R  report.Rmd  report.tex  reporting2.Rproj
scripts/: run.py
social-media-viatra/: .gitignore  .project  build.gradle  settings.gradle
solutions/: .gitignore  Dockerfile-differential  Dockerfile-java8  (+5 more)
solutions/GraphBLAS/: .gitignore  BaseSolution.h  CMakeLists.txt  Dockerfile  Q1_Solution.h  Q1_Solution_Batch.h  Q1_Solution_Incremental.h  Q2_Solution.h  Q2_Solution_Batch.h  Q2_Solution_Incremental_Per_Comment.h  README.md  Solution.h  converter.cpp  gb_utils.h  load.cpp  load.h  main.cpp  solution.ini  utils.cpp  utils.h
solutions/differential-datalog/snq1/snq1_lib/: Cargo.toml
solutions/differential-datalog/snq1/snq1_lib/src/: main.rs
solutions/differential-datalog/snq2/snq2_lib/: Cargo.toml
solutions/differential-datalog/snq2/snq2_lib/src/: main.rs
(+1616 files in other folders)
