[package]
name = "snq1_lib"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differential_datalog = {path = "../snq1_ddlog/differential_datalog"}
snq1 = {path = "../snq1_ddlog/"}
types = {path = "../snq1_ddlog/types"}