[package]
name = "snq2_lib"
version = "0.1.0"
authors = ["Qishen Zhang <qishen23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differential_datalog = {path = "../snq2_ddlog/differential_datalog"}
snq2 = {path = "../snq2_ddlog/"}
types = {path = "../snq2_ddlog/types"}